--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ subprojects {
 
     dependencies {
         testImplementation 'com.github.hyperskill:hs-test:release-SNAPSHOT'
+        implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     }
 
     configurations.all {
